# people-counting

./: .gitignore  README.md  batch_processor.py  ffprobe.py  gradio_interface.py  line_selector.py  people_counter.py  people_detector.py  pyproject.toml  requirements.txt  sample_jobs.csv  sample_jobs.json  setup_and_demo.py
